; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_unwind-libdw.c___report_module.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_unwind-libdw.c___report_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addr_location = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64, %struct.dso* }
%struct.dso = type { i64, i64, i32 }
%struct.unwind_info = type { i32, i32 }

@PERF_RECORD_MISC_USER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.addr_location*, i32, %struct.unwind_info*)* @__report_module to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @__report_module(%struct.addr_location* %0, i32 %1, %struct.unwind_info* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.addr_location*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.unwind_info*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.dso*, align 8
  %10 = alloca i64, align 8
  store %struct.addr_location* %0, %struct.addr_location** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.unwind_info* %2, %struct.unwind_info** %7, align 8
  store %struct.dso* null, %struct.dso** %9, align 8
  %11 = load %struct.unwind_info*, %struct.unwind_info** %7, align 8
  %12 = getelementptr inbounds %struct.unwind_info, %struct.unwind_info* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* @PERF_RECORD_MISC_USER, align 4
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.addr_location*, %struct.addr_location** %5, align 8
  %17 = call i32 @thread__find_symbol(i32 %13, i32 %14, i32 %15, %struct.addr_location* %16)
  %18 = load %struct.addr_location*, %struct.addr_location** %5, align 8
  %19 = getelementptr inbounds %struct.addr_location, %struct.addr_location* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = icmp ne %struct.TYPE_2__* %20, null
  br i1 %21, label %22, label %28

22:                                               ; preds = %3
  %23 = load %struct.addr_location*, %struct.addr_location** %5, align 8
  %24 = getelementptr inbounds %struct.addr_location, %struct.addr_location* %23, i32 0, i32 0
  %25 = load %struct.TYPE_2__*, %struct.TYPE_2__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %25, i32 0, i32 2
  %27 = load %struct.dso*, %struct.dso** %26, align 8
  store %struct.dso* %27, %struct.dso** %9, align 8
  br label %28

28:                                               ; preds = %22, %3
  %29 = load %struct.dso*, %struct.dso** %9, align 8
  %30 = icmp ne %struct.dso* %29, null
  br i1 %30, label %32, label %31

31:                                               ; preds = %28
  store i32 0, i32* %4, align 4
  br label %109

32:                                               ; preds = %28
  %33 = load %struct.unwind_info*, %struct.unwind_info** %7, align 8
  %34 = getelementptr inbounds %struct.unwind_info, %struct.unwind_info* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* %6, align 4
  %37 = call i32* @dwfl_addrmodule(i32 %35, i32 %36)
  store i32* %37, i32** %8, align 8
  %38 = load i32*, i32** %8, align 8
  %39 = icmp ne i32* %38, null
  br i1 %39, label %40, label %58

40:                                               ; preds = %32
  %41 = load i32*, i32** %8, align 8
  %42 = call i32 @dwfl_module_info(i32* %41, i32* null, i64* %10, i32* null, i32* null, i32* null, i32* null, i32* null)
  %43 = load i64, i64* %10, align 8
  %44 = load %struct.addr_location*, %struct.addr_location** %5, align 8
  %45 = getelementptr inbounds %struct.addr_location, %struct.addr_location* %44, i32 0, i32 0
  %46 = load %struct.TYPE_2__*, %struct.TYPE_2__** %45, align 8
  %47 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %46, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = load %struct.addr_location*, %struct.addr_location** %5, align 8
  %50 = getelementptr inbounds %struct.addr_location, %struct.addr_location* %49, i32 0, i32 0
  %51 = load %struct.TYPE_2__*, %struct.TYPE_2__** %50, align 8
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 1
  %53 = load i64, i64* %52, align 8
  %54 = sub nsw i64 %48, %53
  %55 = icmp ne i64 %43, %54
  br i1 %55, label %56, label %57

56:                                               ; preds = %40
  store i32* null, i32** %8, align 8
  br label %57

57:                                               ; preds = %56, %40
  br label %58

58:                                               ; preds = %57, %32
  %59 = load i32*, i32** %8, align 8
  %60 = icmp ne i32* %59, null
  br i1 %60, label %94, label %61

61:                                               ; preds = %58
  %62 = load %struct.unwind_info*, %struct.unwind_info** %7, align 8
  %63 = getelementptr inbounds %struct.unwind_info, %struct.unwind_info* %62, i32 0, i32 0
  %64 = load i32, i32* %63, align 4
  %65 = load %struct.dso*, %struct.dso** %9, align 8
  %66 = getelementptr inbounds %struct.dso, %struct.dso* %65, i32 0, i32 2
  %67 = load i32, i32* %66, align 8
  %68 = load %struct.dso*, %struct.dso** %9, align 8
  %69 = getelementptr inbounds %struct.dso, %struct.dso* %68, i32 0, i32 1
  %70 = load i64, i64* %69, align 8
  %71 = icmp ne i64 %70, 0
  br i1 %71, label %72, label %76

72:                                               ; preds = %61
  %73 = load %struct.dso*, %struct.dso** %9, align 8
  %74 = getelementptr inbounds %struct.dso, %struct.dso* %73, i32 0, i32 1
  %75 = load i64, i64* %74, align 8
  br label %80

76:                                               ; preds = %61
  %77 = load %struct.dso*, %struct.dso** %9, align 8
  %78 = getelementptr inbounds %struct.dso, %struct.dso* %77, i32 0, i32 0
  %79 = load i64, i64* %78, align 8
  br label %80

80:                                               ; preds = %76, %72
  %81 = phi i64 [ %75, %72 ], [ %79, %76 ]
  %82 = load %struct.addr_location*, %struct.addr_location** %5, align 8
  %83 = getelementptr inbounds %struct.addr_location, %struct.addr_location* %82, i32 0, i32 0
  %84 = load %struct.TYPE_2__*, %struct.TYPE_2__** %83, align 8
  %85 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %84, i32 0, i32 0
  %86 = load i64, i64* %85, align 8
  %87 = load %struct.addr_location*, %struct.addr_location** %5, align 8
  %88 = getelementptr inbounds %struct.addr_location, %struct.addr_location* %87, i32 0, i32 0
  %89 = load %struct.TYPE_2__*, %struct.TYPE_2__** %88, align 8
  %90 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %89, i32 0, i32 1
  %91 = load i64, i64* %90, align 8
  %92 = sub nsw i64 %86, %91
  %93 = call i32* @dwfl_report_elf(i32 %64, i32 %67, i64 %81, i32 -1, i64 %92, i32 0)
  store i32* %93, i32** %8, align 8
  br label %94

94:                                               ; preds = %80, %58
  %95 = load i32*, i32** %8, align 8
  %96 = icmp ne i32* %95, null
  br i1 %96, label %97, label %105

97:                                               ; preds = %94
  %98 = load %struct.unwind_info*, %struct.unwind_info** %7, align 8
  %99 = getelementptr inbounds %struct.unwind_info, %struct.unwind_info* %98, i32 0, i32 0
  %100 = load i32, i32* %99, align 4
  %101 = load i32, i32* %6, align 4
  %102 = call i32* @dwfl_addrmodule(i32 %100, i32 %101)
  %103 = load i32*, i32** %8, align 8
  %104 = icmp eq i32* %102, %103
  br label %105

105:                                              ; preds = %97, %94
  %106 = phi i1 [ false, %94 ], [ %104, %97 ]
  %107 = zext i1 %106 to i64
  %108 = select i1 %106, i32 0, i32 -1
  store i32 %108, i32* %4, align 4
  br label %109

109:                                              ; preds = %105, %31
  %110 = load i32, i32* %4, align 4
  ret i32 %110
}

declare dso_local i32 @thread__find_symbol(i32, i32, i32, %struct.addr_location*) #1

declare dso_local i32* @dwfl_addrmodule(i32, i32) #1

declare dso_local i32 @dwfl_module_info(i32*, i32*, i64*, i32*, i32*, i32*, i32*, i32*) #1

declare dso_local i32* @dwfl_report_elf(i32, i32, i64, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
